[tool.poetry]
name = "api-store"
version = "0.1.0"
description = ""
authors = ["carlos738 <carlosasl135@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"
motor = "^3.5.0"
pydantic = "^2.8.2"
pydantic-settings = "^2.3.4"
pre-commit = "^3.7.1"
pytest = "^8.2.2"
pytest-asyncio = "^0.23.7"
httpx = "^0.27.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "-vv --color=yes"
testpaths = [
 "tests",
]

